--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
     </style>
   </head>
   <body>
+
+    <section class="header">
+      <div class="header__message"></div>
+      <div class="header__review"></div>
+    </section>
+    <section class="cardContainer">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </section>
     10,000+ of our users love our products.
 
     We only provide great products combined with excellent customer service.
