finished rating block section

--- a/index.html
+++ b/index.html
@@ -40,16 +40,42 @@
             See what our satisfied customers are saying about our services.
           </p>
         </div>
-        <div class="header__review-container">
-          <div class="rating-block">
-            <img src="/images/icon-star.svg" alt="" class="rating-block__star">
-            <img src="/images/icon-star.svg" alt="" class="rating-block__star">
-            <img src="/images/icon-star.svg" alt="" class="rating-block__star">
-            <img src="/images/icon-star.svg" alt="" class="rating-block__star">
-            <img src="/images/icon-star.svg" alt="" class="rating-block__star">
-            <div class="rating-block__caption">
-              Rated 5 Stars in Reviews
+        <div class="header__rating-container" >
+          <div class="rating-block rating-block--1">
+            <div class="rating-block__star-cont">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
             </div>
+            <div class="rating-block__caption">
+                Rated 5 Stars in Reviews
+            </div>
+          </div>
+          <div class="rating-block rating-block--2">
+            <div class="rating-block__star-cont">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+            </div>
+            <div class="rating-block__caption">
+              Rated 5 Stars in Report Guru
+            </div>
+          </div>
+          <div class="rating-block rating-block--3">
+            <div class="rating-block__star-cont">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+              <img src="/images/icon-star.svg" alt="" class="rating-block__star">
+            </div>
+              <div class="rating-block__caption">
+                Rated 5 Stars in BestTech
+              </div>
           </div>
         </div>
       </div>
