--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
         </div>
       </div>
       
-      <div class="cardContainer">
-        <div class="card">
+      <div class="card-container">
+        <div class="card card--1">
+          <img src="/images/image-colton.jpg" alt="">
           <div class="card__header">
             Colton Smith 
-            Verified Buyer
+            <span>Verified Buyer</span>
           </div>
           <div class="card__content">
             "We needed the same printed design as the one we had ordered a week prior.
@@ -92,20 +93,22 @@
             Excellent!"
           </div>
         </div>
-        <div class="card">
+        <div class="card card--2">
+          <img src="images/image-irene.jpg" alt="">
           <div class="card__header">
             Irene Roberts 
-            Verified Buyer
+            <span>Verified Buyer</span>
           </div>
           <div class="card__content">
             "Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."
           </div>
         </div>
-        <div class="card">
+        <div class="card card--3">
+          <img src="/images/image-anne.jpg" alt="">
           <div class="card__header">
             Anne Wallace 
-            Verified Buyer
+            <span>Verified Buyer</span>
           </div>
           <div class="card__content">
             "Put an order with this company and can only praise them for the very high
